# architecture-patterns-with-python

./: .gitignore  README.md  conftest.py  model.py  mypy.ini  orm.py  pyproject.toml  repository.py  test_allocate.py  test_batches.py  test_repository.py
src/allocation/: config.py  views.py
src/allocation/adapters/: email.py  orm.py  redis_eventpublisher.py  repository.py
src/allocation/domain/: commands.py  events.py  model.py
src/allocation/entrypoints/: flask_app.py  redis_eventconsumer.py
src/allocation/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
tests/: conftest.py  random_refs.py  test_allocate.py  test_api.py  test_batches.py
tests/e2e/: api_client.py  redis_client.py  test_api.py  test_external_events.py
tests/integration/: test_repository.py  test_uow.py
tests/unit/: test_allocate.py  test_handlers.py  test_product.py  test_services.py
