[tool.poetry]
name = "architecture-patterns-with-python"
version = "0.1.0"
description = ""
authors = ["Jess Monter"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.4"
pytest = "^8.3.2"

[tool.ruff]
# Select the rules you want to apply (e.g., E for errors, F for pyflakes, etc.)
select = ["E", "F", "W", "C"]

# Ignore specific rules
ignore = ["E501", "F841"]  # Ignore line length and unused variables

# Max line length
line-length = 88

# Exclude certain files or directories from linting
exclude = ["migrations/*", "settings.py"]

# Enable autofix functionality (optional)
fix = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
