[tool.poetry]
name = "architecture-patterns-with-python"
version = "0.1.0"
description = ""
authors = ["Jess Monter"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
sqlalchemy = "^2.0.41"
psycopg2 = "^2.9.10"
requests = "^2.32.4"
setuptools = "^80.9.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.4"
pytest = "^8.3.2"
types-requests = "^2.32.4.20250611"

[tool.ruff]
# Select the rules you want to apply (e.g., E for errors, F for pyflakes, etc.)
select = ["E", "F", "W", "C"]

# Ignore specific rules
ignore = ["E501", "F841"]  # Ignore line length and unused variables

# Max line length
line-length = 88

# Exclude certain files or directories from linting
exclude = ["migrations/*", "settings.py"]

# Enable autofix functionality (optional)
fix = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true

exclude = "^tests/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
